--- a/hahow.html
+++ b/hahow.html
@@ -14,7 +14,7 @@
 <title>hahow</title>
 <!-- write your code here -->
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
-<script src="hahow.js?1629618830265"></script>
+<script src="hahow.js"></script>
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
 function init() {
